[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phase5d"
version = "0.1.0"
description = "5D phase diagram visualization for high-entropy alloys"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Niklas Marschall" }]
requires-python = ">=3.9"
keywords = ["high-entropy alloys", "phase diagram", "CALPHAD", "materials science", "visualization", "HEA"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "scipy>=1.10",
    "pyvista>=0.43",
]

[project.optional-dependencies]
isosurface = ["scikit-image>=0.19"]
dev = ["pytest", "pytest-cov"]

[project.urls]
Repository = "https://github.com/nmmatters/phase5d"

[tool.setuptools.packages.find]
where = ["."]
include = ["phase5d*"]
